go in-line js CHONK too much CVHONK

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# Working nginx.conf with security that doesn't break functionality
+# Fixed nginx.conf with working chat API
 user nobody;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
@@ -13,16 +13,10 @@ http {
     include /usr/local/openresty/nginx/conf/mime.types;
     default_type application/octet-stream;
 
-    # Basic security headers (safe ones)
+    # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
-
-    # Rate limiting zones (more lenient)
-    limit_req_zone $binary_remote_addr zone=auth_login:10m rate=10r/m;     # 10 login attempts per minute
-    limit_req_zone $binary_remote_addr zone=auth_register:10m rate=5r/m;   # 5 registration attempts per minute
-    limit_req_zone $binary_remote_addr zone=chat_api:10m rate=20r/m;       # 20 chat messages per minute
-    limit_req_zone $binary_remote_addr zone=general:10m rate=60r/m;        # 60 general requests per minute
 
     # Upstreams
     upstream redis_backend {
@@ -50,7 +44,7 @@ http {
         # Hide nginx version
         server_tokens off;
 
-        # Internal Redis operations (unchanged - these work)
+        # Internal Redis operations
         location ~ ^/redis-internal/hgetall/(.+) {
             internal;
             redis2_query hgetall $1;
@@ -108,43 +102,82 @@ http {
             redis2_pass redis_backend;
         }
 
-        # ===== AUTH ENDPOINTS WITH GENTLE RATE LIMITING =====
+        # ===== AUTH ENDPOINTS =====
         
         location = /api/auth/login {
-            # Gentle rate limiting - allows bursts
-            limit_req zone=auth_login burst=3 nodelay;
-            
-            # Log login attempts
-            access_log /var/log/nginx/auth_login.log combined;
-            
-            # Use original working auth.lua
             content_by_lua_file /usr/local/openresty/nginx/lua/auth.lua;
         }
 
         location = /api/auth/register {
-            # Gentle rate limiting
-            limit_req zone=auth_register burst=2 nodelay;
-            
-            # Log registration attempts
-            access_log /var/log/nginx/auth_register.log combined;
-            
             content_by_lua_file /usr/local/openresty/nginx/lua/auth.lua;
         }
 
         location = /api/auth/verify {
-            # More generous rate limiting for token verification
-            limit_req zone=general burst=10 nodelay;
-            
             content_by_lua_file /usr/local/openresty/nginx/lua/auth.lua;
         }
 
-        # ===== CHAT ENDPOINT WITH SIMPLE AUTH CHECK =====
+        # ===== CHAT ENDPOINT - FIXED =====
         
         location /api/chat {
-            # Rate limiting for chat
-            limit_req zone=chat_api burst=5 nodelay;
+            # Simple auth check - don't overcomplicate it
+            access_by_lua_block {
+                local auth_header = ngx.var.http_authorization
+                if not auth_header or not string.match(auth_header, "^Bearer ") then
+                    ngx.log(ngx.ERR, "Chat API: No valid authorization header")
+                    ngx.status = 401
+                    ngx.header.content_type = "application/json"
+                    ngx.say('{"error": "Authentication required"}')
+                    ngx.exit(401)
+                end
+                
+                -- Log successful auth
+                ngx.log(ngx.INFO, "Chat API: Authentication successful")
+            }
             
-            # Simple auth check without breaking functionality
+            # Enhanced proxy settings
+            proxy_pass http://ollama_backend/api/chat;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Accept-Encoding "";
+            
+            # Pass through all headers
+            proxy_pass_request_headers on;
+            proxy_pass_request_body on;
+            
+            # Streaming support with longer timeouts
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_read_timeout 900s;
+            proxy_send_timeout 900s;
+            proxy_connect_timeout 60s;
+            
+            # Handle errors gracefully
+            proxy_intercept_errors off;
+            
+            # Add CORS headers if needed
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
+            add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
+            
+            # Handle preflight requests
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin *;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
+                add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
+                add_header Access-Control-Max-Age 1728000;
+                add_header Content-Type "text/plain; charset=utf-8";
+                add_header Content-Length 0;
+                return 204;
+            }
+        }
+
+        # ===== TEST CHAT ENDPOINT - FOR DEBUGGING =====
+        
+        location = /api/chat/test {
             access_by_lua_block {
                 local auth_header = ngx.var.http_authorization
                 if not auth_header or not string.match(auth_header, "^Bearer ") then
@@ -155,29 +188,15 @@ http {
                 end
             }
             
-            proxy_pass http://ollama_backend/api/chat;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Streaming support
-            proxy_buffering off;
-            proxy_cache off;
-            proxy_read_timeout 300s;
-            proxy_send_timeout 300s;
-            proxy_connect_timeout 30s;
+            content_by_lua_block {
+                ngx.header.content_type = "application/json"
+                ngx.say('{"message": {"content": "Chat API test successful! This is a test response from the chat endpoint."}, "status": "success"}')
+            }
         }
 
-        # ===== ADMIN ENDPOINTS WITH SIMPLE AUTH CHECK =====
+        # ===== ADMIN ENDPOINTS =====
         
         location ~ ^/api/admin/(.+) {
-            # Rate limiting for admin
-            limit_req zone=general burst=10 nodelay;
-            
-            # Simple admin auth check
             access_by_lua_block {
                 local cjson = require "cjson"
                 local auth_header = ngx.var.http_authorization
@@ -205,102 +224,128 @@ http {
             content_by_lua_file /usr/local/openresty/nginx/lua/admin.lua;
         }
 
-        # ===== PROTECTED HTML ROUTES WITH SIMPLE CHECKS =====
+        # ===== SECURE HTML ROUTES =====
         
         location = /chat {
-            # Simple auth check - redirect if no token
             access_by_lua_block {
+                local token = ngx.var.arg_token or ngx.var.cookie_auth_token
                 local auth_header = ngx.var.http_authorization
-                local token = ngx.var.cookie_auth_token or ngx.var.arg_token
                 
-                -- Check for token in various places
-                if not auth_header and not token then
-                    -- If no token found, redirect to login
-                    return ngx.redirect("/login")
+                if auth_header and string.match(auth_header, "^Bearer ") then
+                    token = string.sub(auth_header, 8)
+                end
+                
+                if not token then
+                    ngx.log(ngx.INFO, "No token found for /chat, serving page for client-side redirect")
+                end
+                
+                if token then
+                    local cjson = require "cjson"
+                    local ok, payload = pcall(function()
+                        return cjson.decode(ngx.decode_base64(token))
+                    end)
+                    
+                    if not ok or not payload.exp or payload.exp < ngx.time() then
+                        ngx.log(ngx.INFO, "Invalid token for /chat, serving page for client-side redirect")
+                    end
                 end
             }
             
             try_files /chat.html =404;
         }
-        
+
         location = /admin {
-            # Simple admin check - redirect if not admin
             access_by_lua_block {
                 local cjson = require "cjson"
-                local auth_header = ngx.var.http_authorization
-                local token = ngx.var.cookie_auth_token or ngx.var.arg_token
                 
-                -- For now, just redirect to login if no token
-                -- Real auth check happens in JavaScript
-                if not auth_header and not token then
+                local token = ngx.var.arg_token or ngx.var.cookie_auth_token
+                local auth_header = ngx.var.http_authorization
+                
+                if auth_header and string.match(auth_header, "^Bearer ") then
+                    token = string.sub(auth_header, 8)
+                end
+                
+                if not token then
+                    ngx.log(ngx.WARN, "Admin access attempted without token from " .. ngx.var.remote_addr)
                     return ngx.redirect("/login")
                 end
+                
+                local ok, payload = pcall(function()
+                    return cjson.decode(ngx.decode_base64(token))
+                end)
+                
+                if not ok or not payload.exp or payload.exp < ngx.time() then
+                    ngx.log(ngx.WARN, "Admin access with invalid token from " .. ngx.var.remote_addr)
+                    return ngx.redirect("/login")
+                end
+                
+                if not payload.is_admin then
+                    ngx.log(ngx.WARN, "Non-admin user attempted admin access: " .. (payload.username or "unknown"))
+                    return ngx.redirect("/unauthorised")
+                end
+                
+                local res = ngx.location.capture("/redis-internal/hgetall/user:" .. payload.username)
+                if res.status ~= 200 then
+                    ngx.log(ngx.WARN, "Admin access with non-existent user: " .. payload.username)
+                    return ngx.redirect("/login")
+                end
+                
+                ngx.log(ngx.INFO, "Admin access granted to: " .. payload.username)
             }
             
             try_files /admin.html =404;
         }
 
-        # ===== PUBLIC ROUTES WITH BASIC RATE LIMITING =====
+        # ===== PUBLIC ROUTES =====
         
         location = / { 
-            limit_req zone=general burst=20 nodelay;
             try_files /index.html =404; 
         }
         
         location = /login { 
-            limit_req zone=general burst=20 nodelay;
             try_files /login.html =404; 
         }
         
         location = /register { 
-            limit_req zone=general burst=20 nodelay;
             try_files /register.html =404; 
-        }
-
-        # ===== STATIC FILES =====
-        
-        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            limit_req zone=general burst=50 nodelay;
-            expires 1h;
-            try_files $uri =404;
         }
 
         # ===== HEALTH CHECK =====
         
         location = /health {
-            access_log off;
             content_by_lua_block {
                 ngx.header.content_type = "application/json"
                 ngx.say('{"status": "healthy", "timestamp": "' .. ngx.utctime() .. '"}')
             }
         }
 
-        # ===== BASIC SECURITY BLOCKS =====
+        # ===== STATIC FILES =====
         
-        # Block access to hidden files
+        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1h;
+            try_files $uri =404;
+        }
+
+        # ===== SECURITY BLOCKS =====
+        
         location ~ /\. {
             deny all;
             access_log off;
             log_not_found off;
         }
 
-        # Block access to sensitive files
         location ~* \.(conf|log|sql|sh|py)$ {
             deny all;
             access_log off;
             log_not_found off;
         }
 
-        # Default handler
         location / {
-            limit_req zone=general burst=20 nodelay;
             try_files $uri $uri/ =404;
         }
 
-        # Error pages
         error_page 404 /404.html;
         error_page 403 /unauthorised.html;
-        error_page 429 /rate_limit.html;
         error_page 500 502 503 504 /50x.html;
     }
 }
