--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -1,4 +1,4 @@
-# redis/redis.conf - Fixed for better persistence
+# redis/redis.conf - Immediate persistence configuration
 bind 0.0.0.0
 protected-mode no
 port 6379
@@ -11,16 +11,18 @@ loglevel notice
 logfile ""
 databases 16
 
-# RDB Persistence - Enable periodic saves
-save 900 1
-save 300 10
-save 60 10000
+# RDB Persistence - Much more aggressive saving
+save 900 1    
+save 300 10    
+save 60 10000  
+save 10 1      
+save 1 1       
 stop-writes-on-bgsave-error yes
 rdbcompression yes
 rdbchecksum yes
 dbfilename dump.rdb
 
-# AOF Persistence - Enable for real-time persistence
+# AOF Persistence - Real-time with immediate writes
 appendonly yes
 appendfilename "appendonly.aof"
 appendfsync everysec
@@ -33,14 +35,18 @@ aof-use-rdb-preamble yes
 # Directory for data files
 dir /data
 
-# Memory settings
+# Memory settings - Never evict data
 maxmemory 2gb
 maxmemory-policy noeviction
 
-# Disable some potentially problematic features
+# Disable lazy freeing for consistency
 lazyfree-lazy-eviction no
 lazyfree-lazy-expire no
 lazyfree-lazy-server-del no
+
+# Force fsync for durability
+rdb-save-incremental-fsync yes
+aof-rewrite-incremental-fsync yes
 
 # Performance
 hz 10
