--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# Fixed nginx.conf with working chat API
+# Fixed nginx.conf with Redis KEYS support for pending user counting
 user nobody;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
@@ -64,6 +64,13 @@ http {
             redis2_pass redis_backend;
         }
 
+        # NEW: Support for Redis KEYS command
+        location ~ ^/redis-internal/keys/(.+) {
+            internal;
+            redis2_query keys $1;
+            redis2_pass redis_backend;
+        }
+
         location ~ ^/redis-internal/hset/(.+) {
             internal;
             set_by_lua_block $redis_cmd {
@@ -116,10 +123,9 @@ http {
             content_by_lua_file /usr/local/openresty/nginx/lua/auth.lua;
         }
 
-        # ===== CHAT ENDPOINT - FIXED =====
+        # ===== CHAT ENDPOINT =====
         
         location /api/chat {
-            # Simple auth check - don't overcomplicate it
             access_by_lua_block {
                 local auth_header = ngx.var.http_authorization
                 if not auth_header or not string.match(auth_header, "^Bearer ") then
@@ -130,11 +136,9 @@ http {
                     ngx.exit(401)
                 end
                 
-                -- Log successful auth
                 ngx.log(ngx.INFO, "Chat API: Authentication successful")
             }
             
-            # Enhanced proxy settings
             proxy_pass http://ollama_backend/api/chat;
             proxy_http_version 1.1;
             proxy_set_header Connection "";
@@ -144,26 +148,21 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Accept-Encoding "";
             
-            # Pass through all headers
             proxy_pass_request_headers on;
             proxy_pass_request_body on;
             
-            # Streaming support with longer timeouts
             proxy_buffering off;
             proxy_cache off;
             proxy_read_timeout 900s;
             proxy_send_timeout 900s;
             proxy_connect_timeout 60s;
             
-            # Handle errors gracefully
             proxy_intercept_errors off;
             
-            # Add CORS headers if needed
             add_header Access-Control-Allow-Origin *;
             add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
             add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
             
-            # Handle preflight requests
             if ($request_method = 'OPTIONS') {
                 add_header Access-Control-Allow-Origin *;
                 add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
@@ -175,7 +174,7 @@ http {
             }
         }
 
-        # ===== TEST CHAT ENDPOINT - FOR DEBUGGING =====
+        # ===== TEST CHAT ENDPOINT =====
         
         location = /api/chat/test {
             access_by_lua_block {
