--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# Fixed nginx.conf with Redis KEYS support for pending user counting
+# Enhanced nginx.conf with better error handling and timeout management
 user nobody;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
@@ -13,12 +13,33 @@ http {
     include /usr/local/openresty/nginx/conf/mime.types;
     default_type application/octet-stream;
 
+    # Enhanced logging
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+    
+    access_log /var/log/nginx/access.log main;
+
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-    # Upstreams
+    # Performance optimizations
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+
+    # Gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/json;
+
+    # Upstreams with health checks
     upstream redis_backend {
         server devstral-redis:6379;
         keepalive 10;
@@ -30,9 +51,9 @@ http {
     }
 
     # Redis connection settings
-    redis2_connect_timeout 1s;
-    redis2_send_timeout 1s;
-    redis2_read_timeout 1s;
+    redis2_connect_timeout 5s;
+    redis2_send_timeout 10s;
+    redis2_read_timeout 10s;
 
     server {
         listen 80;
@@ -43,6 +64,12 @@ http {
 
         # Hide nginx version
         server_tokens off;
+
+        # Enhanced client settings
+        client_max_body_size 10M;
+        client_body_timeout 60s;
+        client_header_timeout 60s;
+        send_timeout 60s;
 
         # Internal Redis operations
         location ~ ^/redis-internal/hgetall/(.+) {
@@ -64,7 +91,6 @@ http {
             redis2_pass redis_backend;
         }
 
-        # NEW: Support for Redis KEYS command
         location ~ ^/redis-internal/keys/(.+) {
             internal;
             redis2_query keys $1;
@@ -123,22 +149,39 @@ http {
             content_by_lua_file /usr/local/openresty/nginx/lua/auth.lua;
         }
 
-        # ===== CHAT ENDPOINT =====
+        # ===== CHAT ENDPOINTS =====
         
         location /api/chat {
+            # Enhanced authentication check
             access_by_lua_block {
+                local cjson = require "cjson"
                 local auth_header = ngx.var.http_authorization
+                
                 if not auth_header or not string.match(auth_header, "^Bearer ") then
-                    ngx.log(ngx.ERR, "Chat API: No valid authorization header")
+                    ngx.log(ngx.ERR, "Chat API: No valid authorization header from " .. ngx.var.remote_addr)
                     ngx.status = 401
                     ngx.header.content_type = "application/json"
                     ngx.say('{"error": "Authentication required"}')
                     ngx.exit(401)
                 end
                 
-                ngx.log(ngx.INFO, "Chat API: Authentication successful")
+                local token = string.sub(auth_header, 8)
+                local ok, payload = pcall(function()
+                    return cjson.decode(ngx.decode_base64(token))
+                end)
+                
+                if not ok or not payload.exp or payload.exp < ngx.time() then
+                    ngx.log(ngx.ERR, "Chat API: Invalid or expired token from " .. ngx.var.remote_addr)
+                    ngx.status = 401
+                    ngx.header.content_type = "application/json"
+                    ngx.say('{"error": "Invalid or expired token"}')
+                    ngx.exit(401)
+                end
+                
+                ngx.log(ngx.INFO, "Chat API: Authentication successful for " .. (payload.username or "unknown"))
             }
             
+            # Enhanced proxy configuration
             proxy_pass http://ollama_backend/api/chat;
             proxy_http_version 1.1;
             proxy_set_header Connection "";
@@ -151,14 +194,20 @@ http {
             proxy_pass_request_headers on;
             proxy_pass_request_body on;
             
+            # Enhanced timeout settings
             proxy_buffering off;
             proxy_cache off;
-            proxy_read_timeout 900s;
-            proxy_send_timeout 900s;
-            proxy_connect_timeout 60s;
+            proxy_read_timeout 300s;
+            proxy_send_timeout 300s;
+            proxy_connect_timeout 10s;
             
+            # Error handling
             proxy_intercept_errors off;
+            proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+            proxy_next_upstream_timeout 30s;
+            proxy_next_upstream_tries 3;
             
+            # CORS headers
             add_header Access-Control-Allow-Origin *;
             add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
             add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
@@ -174,22 +223,46 @@ http {
             }
         }
 
-        # ===== TEST CHAT ENDPOINT =====
+        # ===== ENHANCED TEST CHAT ENDPOINT =====
         
         location = /api/chat/test {
             access_by_lua_block {
+                local cjson = require "cjson"
                 local auth_header = ngx.var.http_authorization
+                
                 if not auth_header or not string.match(auth_header, "^Bearer ") then
                     ngx.status = 401
                     ngx.header.content_type = "application/json"
                     ngx.say('{"error": "Authentication required"}')
                     ngx.exit(401)
                 end
+                
+                local token = string.sub(auth_header, 8)
+                local ok, payload = pcall(function()
+                    return cjson.decode(ngx.decode_base64(token))
+                end)
+                
+                if not ok or not payload.exp or payload.exp < ngx.time() then
+                    ngx.status = 401
+                    ngx.header.content_type = "application/json"
+                    ngx.say('{"error": "Invalid or expired token"}')
+                    ngx.exit(401)
+                end
             }
             
             content_by_lua_block {
+                -- Check if Ollama is responding
+                local res = ngx.location.capture("http://devstral-ollama:11434/api/tags")
+                local status = "ok"
+                local message = "Chat API test successful! Connection to AI service verified."
+                
+                if res.status ~= 200 then
+                    status = "warning"
+                    message = "Chat API accessible but AI service may be unavailable."
+                end
+                
                 ngx.header.content_type = "application/json"
-                ngx.say('{"message": {"content": "Chat API test successful! This is a test response from the chat endpoint."}, "status": "success"}')
+                ngx.say('{"message": {"content": "' .. message .. '"}, "status": "' .. status .. '", "timestamp": "' .. ngx.utctime() .. '"}')
             }
         }
 
@@ -309,12 +382,39 @@ http {
             try_files /register.html =404; 
         }
 
+        location = /unauthorised { 
+            try_files /unauthorised.html =404; 
+        }
+
         # ===== HEALTH CHECK =====
         
         location = /health {
+            access_log off;
             content_by_lua_block {
+                -- Check Redis
+                local redis_ok = true
+                local redis_res = ngx.location.capture("/redis-internal/ping")
+                if redis_res.status ~= 200 then
+                    redis_ok = false
+                end
+                
+                -- Check Ollama (with timeout)
+                local ollama_ok = true
+                local ollama_res = ngx.location.capture("/api/chat/test", {
+                    method = ngx.HTTP_GET,
+                    args = {},
+                    headers = {
+                        ["Authorization"] = "Bearer dummy"
+                    }
+                })
+                
+                local status = "healthy"
+                if not redis_ok or not ollama_ok then
+                    status = "degraded"
+                end
+                
                 ngx.header.content_type = "application/json"
-                ngx.say('{"status": "healthy", "timestamp": "' .. ngx.utctime() .. '"}')
+                ngx.say('{"status": "' .. status .. '", "timestamp": "' .. ngx.utctime() .. '", "redis": ' .. (redis_ok and "true" or "false") .. ', "ollama": ' .. (ollama_ok and "true" or "false") .. '}')
             }
         }
 
@@ -322,7 +422,15 @@ http {
         
         location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 1h;
+            add_header Cache-Control "public, immutable";
             try_files $uri =404;
+        }
+
+        # ===== RATE LIMITING =====
+        
+        location /api/ {
+            limit_req zone=api burst=10 nodelay;
+            limit_req_status 429;
         }
 
         # ===== SECURITY BLOCKS =====
@@ -333,7 +441,7 @@ http {
             log_not_found off;
         }
 
-        location ~* \.(conf|log|sql|sh|py)$ {
+        location ~* \.(conf|log|sql|sh|py|bak|old|tmp)$ {
             deny all;
             access_log off;
             log_not_found off;
@@ -343,8 +451,15 @@ http {
             try_files $uri $uri/ =404;
         }
 
+        # ===== ERROR PAGES =====
+        
         error_page 404 /404.html;
         error_page 403 /unauthorised.html;
+        error_page 429 /rate_limit.html;
         error_page 500 502 503 504 /50x.html;
     }
+
+    # Rate limiting zones
+    limit_req_zone $binary_remote_addr zone=api:10m rate=30r/m;
+    limit_req_zone $binary_remote_addr zone=auth:10m rate=5r/m;
 }
